modified properties file

--- a/src/test/resources/data/data.properties
+++ b/src/test/resources/data/data.properties
@@ -1,5 +1,5 @@
-email = sahas.qa@gmail.com
-password = sAhasreddy25@
+email = sahasg21@gmail.com
+password = sahasreddy25@S
 inputlocation = 810 UNION STREET Norfolk, VA, 23510
 expectedLocation = 810 UNION STREET
 inputBuildingNumber = 111
